--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -667,7 +667,7 @@
 
 
 
-<script>
+@*<script>
     function getsponsordetails(obj) {
         debugger;
             $("#divload").css({ 'display': '' });
@@ -850,5 +850,5 @@
             }
         }
 
-</script>
+</script>*@
 
